Port changes from 1.17.1 Bump mod version
Signed-off-by: ApexModder <robsonlawson3@gmail.com>